--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@gluestack-ui/utils": "^3.0.11",
     "@legendapp/motion": "^2.3.0",
     "@react-navigation/native": "^7.1.8",
-    "expo": "~54.0.30",
-    "expo-constants": "~18.0.12",
-    "expo-font": "~14.0.10",
+    "expo": "^54.0.32",
+    "expo-constants": "^18.0.13",
+    "expo-font": "^14.0.11",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
-    "expo-router": "~6.0.21",
+    "expo-router": "^6.0.22",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
@@ -33,7 +33,7 @@
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.13.0",
+    "react-native-svg": "^15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "^0.5.1",
     "react-stately": "^3.39.0",
