--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@expo/vector-icons": "^15.0.3",
     "@gluestack-ui/core": "^3.0.10",
     "@gluestack-ui/utils": "^3.0.11",
+    "@hebcal/core": "^6.0.8",
+    "@hebcal/locales": "^6.3.3",
     "@legendapp/motion": "^2.3.0",
     "@react-navigation/native": "^7.1.8",
+    "date-fns": "^4.1.0",
     "expo": "^54.0.32",
     "expo-constants": "^18.0.13",
     "expo-font": "^14.0.11",
